update editorconfig and checkstyle; reformat project